# Biljett

./: .gitignore  README.md  pyproject.toml  sl.py
.claude/: settings.local.json
.github/workflows/: ci.yml
data/fares/: sl.json
src/biljett/: __init__.py  __main__.py  paths.py  services.py
src/biljett/cache/: sqlite_cache.py
src/biljett/cli/: app.py
src/biljett/config/: __init__.py  models.py  service.py
src/biljett/core/: __init__.py  calendar.py  fare_engine.py  formatting.py  models.py
src/biljett/providers/: __init__.py  registry.py
src/biljett/providers/common/: __init__.py  protocols.py
src/biljett/providers/sl/: __init__.py  fare_catalog.py  provider.py
src/biljett/tui/: __init__.py  app.py
